mise à jour de mes page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
       <img src="image7/chien-chat.jpg" class="chien">
       <h1>1stophealthyPet</h1>
       <h2>Best Meds and Healthy Food in One Place</h2>
+      <a href="https://www.petwellbeing.ca/" class="logoPet" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+        data-aos-duration="2000">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <img src="image7/image.png" alt=""> </a>
+    </div>
+    <div class="pets">
+      <h3>Who you are</h3>
+      <p>We are the leading place with new concept for lovers of pets.
+        Our mission is to guide, enlighten and save time for all those in need of pet’s food, meds and a
+        new perfect place for interaction of lovers of pets.
+        Our long term vision is to create a platform where lovers of pets will communicate, share
+        experience, knowledge and testimonies as regards to how they improve the wellbeing of their
+        lovely pets.</p>
     </div>
     <div class="meds">
       <h3>Pets Meds</h3>
@@ -25,7 +41,8 @@
     </div>
     <div class="food">
       <h3>Pets Food</h3>
-      <p>Notre site vend les aliments les moins cher de vos animaux domestique</p>
+      <p>Notre site vend les aliments les moins cher de vos animaux domestique
+      </p>
     </div>
     <div class="menu">
       <a href="index.html">
@@ -47,7 +64,7 @@
         <span></span>
         <span></span>
         <span></span>
-        What is healhy Pet
+        What is healthy Pet
       </a>
       <a href="future.html">
         <span></span>
@@ -62,6 +79,13 @@
         <span></span>
         <span></span>
         contact
+      </a>
+      <a href="training.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Best Dog training
       </a>
     </div>
   </div>
