--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="image7/image.png" alt=""> </a>
     </div>
     <div class="pets">
-      <h3>Who you are</h3>
+      <h3>Who we are</h3>
       <p>We are the leading place with new concept for lovers of pets.
         Our mission is to guide, enlighten and save time for all those in need of pet’s food, meds and a
         new perfect place for interaction of lovers of pets.
