--- a/future.html
+++ b/future.html
@@ -24,7 +24,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <img src="image7/image.png" alt=""> </a>
+        <img src="image7/image.png" alt="" id="log"> </a>
     </div>
     <div class="future">
       <h3>Future</h3>
