--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <span></span>
         <span></span>
         <span></span>
-        <img src="image7/image.png" alt=""> </a>
+        <img src="image7/image.png" alt="" id="log"> </a>
     </div>
     <div class="pets">
       <h3>Who we are</h3>
-      <p>We are the leading place with new concept for lovers of pets.
+      <p>Who we are We are the leading place with new concept for lovers of pets.
         Our mission is to guide, enlighten and save time for all those in need of pet’s food, meds and a
         new perfect place for interaction of lovers of pets.
         Our long term vision is to create a platform where lovers of pets will communicate, share
