--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="pets">
       <h3>Who we are</h3>
-      <p>Who we are We are the leading place with new concept for lovers of pets.
+      <p>We are the leading place with new concept for lovers of pets.
         Our mission is to guide, enlighten and save time for all those in need of pet’s food, meds and a
         new perfect place for interaction of lovers of pets.
         Our long term vision is to create a platform where lovers of pets will communicate, share
