--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         experience, knowledge and testimonies as regards to how they improve the wellbeing of their
         lovely pets.</p>
     </div>
-    <div class="meds">
+    <div class="meds" data-aos="zoom-in-down" data-aos-duration="3000">
       <h3>Pets Meds</h3>
       <p>Notre site vend les medicament à bat prix et explique à nos client leur notice</p>
     </div>
-    <div class="food">
+    <div class="food" data-aos="zoom-in-down" data-aos-duration="3000">
       <h3>Pets Food</h3>
       <p>Notre site vend les aliments les moins cher de vos animaux domestique
       </p>
