--- a/training.html
+++ b/training.html
@@ -15,16 +15,22 @@
 <body>
   <div class="row">
     <div class="header">
-      <img src="image7/chien-chat.jpg" class="chien">
-      <h1>1stophealthyPet</h1>
-      <h2>Best Meds and Healthy Food in One Place</h2>
-      <a href="https://www.petwellbeing.ca/" class="logoPet" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <img src="image7/image.png" alt="" id="log"> </a>
+      <div class="logoPet">
+        <a href="https://www.petwellbeing.ca/" class="logoPet" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <img src="image7/image.png" alt="" id="log"> </a>
+      </div>
+      <div class="caracte">
+        <h1>1stophealthyPet</h1>
+        <h2>Best Meds and Healthy Food in One Place</h2>
+      </div>
+      <div class="chien">
+        <img src="image7/chien-chat.jpg" id="chien2">
+      </div>
     </div>
     <div class="meds">
 
