--- a/future.html
+++ b/future.html
@@ -25,7 +25,7 @@
           <img src="image7/image.png" alt="" id="log"> </a>
       </div>
       <div class="caracte">
-        <h1>1stophealthyPet</h1>
+        <h1><span>1stop</span>healthyPet</h1>
         <h2>Best Meds and Healthy Food in One Place</h2>
       </div>
       <div class="chien">
