--- a/future.html
+++ b/future.html
@@ -22,7 +22,7 @@
           <span></span>
           <span></span>
           <span></span>
-          <img src="image7/image.png" alt="" id="log"> </a>
+          <img src="image7/img-stop.png" alt="" id="log"> </a>
       </div>
       <div class="caracte">
         <h1><span>1stop</span>healthyPet</h1>
