--- a/index.html
+++ b/index.html
@@ -26,27 +26,40 @@
       </div>
       <div class="caracte">
         <h1><span>1stop</span>healthyPet</h1>
-        <h2>Best Meds and Healthy Food in One Place</h2>
+        <a href="https: //www.petwellbeing.ca/" class="texto1">
+          <h2>Best Meds and Healthy Food in One Place</h2>
+        </a>
       </div>
       <div class="chien">
         <img src="image7/chien-chat.jpg" id="chien2">
       </div>
     </div>
     <div class="pets">
-      <h3>Who we are</h3>
+      <a href="https: //www.petwellbeing.ca/" class="texto-pets">
+        <h3>Who we are</h3>
+      </a>
       <p>We are the leading place with new concept for lovers of pets.
         Our mission is to guide, enlighten and save time for all those in need of pet’s food, meds and a
         new perfect place for interaction of lovers of pets.
         Our long term vision is to create a platform where lovers of pets will communicate, share
         experience, knowledge and testimonies as regards to how they improve the wellbeing of their
         lovely pets.</p>
+      <form action="https://formspree.io/xqkywoge" method="POST" class="group">
+        <input type="text" name="name" id="auteur" placeholder="Name" value="">
+        <input type="email" name="_replyto" id="email" placeholder="email" value="">
+        <input type="submit" value="Send" id="submit-btn">
+      </form>
     </div>
     <div class="meds" data-aos="zoom-in-down" data-aos-duration="3000">
-      <h3>Pets Meds</h3>
+      <a href="https: //www.petwellbeing.ca/" class="texto-meds">
+        <h3>Pets Meds</h3>
+      </a>
       <p>Notre site vend les medicament à bat prix et explique à nos client leur notice</p>
     </div>
     <div class="food" data-aos="zoom-in-down" data-aos-duration="3000">
-      <h3>Pets Food</h3>
+      <a href="https: //www.petwellbeing.ca/" class="texto-food">
+        <h3>Pets Food</h3>
+      </a>
       <p>Notre site vend les aliments les moins cher de vos animaux domestique
       </p>
     </div>
@@ -79,12 +92,12 @@
         <span></span>
         Future projects
       </a>
-      <a href="contact.html">
+      <a href="https://www.petwellbeing.ca/">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        contact
+        Pets Meds
       </a>
       <a href="training.html">
         <span></span>
