--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PETS</title>
+  <title>PETS-INDEX</title>
   <link href="css/grid.css" media="all" />
   <link rel="stylesheet" href="style.css" media="all" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
@@ -44,7 +44,7 @@
         Our long term vision is to create a platform where lovers of pets will communicate, share
         experience, knowledge and testimonies as regards to how they improve the wellbeing of their
         lovely pets.</p>
-      <form action="https://formspree.io/xqkywoge" method="POST" class="group">
+      <form action="https://formspree.io/xpzoagan" method="POST" class="group">
         <input type="text" name="name" id="auteur" placeholder="Name" value="">
         <input type="email" name="_replyto" id="email" placeholder="email" value="">
         <input type="submit" value="Send" id="submit-btn">
@@ -107,7 +107,7 @@
         Best Dog training
       </a>
     </div>
-  </div>
+    </>
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
