--- a/future.html
+++ b/future.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PETS</title>
+  <title>PETS-FUTURE</title>
   <link href="css/grid.css" media="all" />
   <link rel="stylesheet" href="style.css" media="all" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
