--- a/propos.html
+++ b/propos.html
@@ -26,7 +26,9 @@
       </div>
       <div class="caracte">
         <h1><span>1stop</span>healthyPet</h1>
-        <h2>Best Meds and Healthy Food in One Place</h2>
+        <a href="https://www.petwellbeing.ca/" class="texto1">
+          <h2>Best Meds and Healthy Food in One Place</h2>
+        </a>
       </div>
       <div class="chien">
         <img src="image7/chien-chat.jpg" id="chien2">
