--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       <div class="caracte">
         <h1><span>1stop</span>healthyPet</h1>
         <a href="https://www.petwellbeing.ca/" class="texto1">
-          <h2>Best Meds and Healthy Food in One Place</h2>
+          <h2>Find all you need for a healthy pet</h2>
         </a>
       </div>
       <div class="chien">
