--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="caracte">
         <h1><span>1stop</span>healthyPet</h1>
         <a href="https://www.petwellbeing.ca/" class="texto1">
-          <h2>Best Meds and Healthy Food in One Place</h2>
+          <h2>All you need for pets in one place</h2>
         </a>
       </div>
       <div class="chien">
@@ -44,7 +44,7 @@
         Our long term vision is to create a platform where lovers of pets will communicate, share
         experience, knowledge and testimonies as regards to how they improve the wellbeing of their
         lovely pets.</p>
-      <form action="https://formspree.io/xpzoagan" method="POST" class="group">
+      <form action="https://formspree.io/meqpjbdk" method="POST" class="group">
         <input type="text" name="name" id="auteur" placeholder="Name" value="">
         <input type="email" name="_replyto" id="email" placeholder="email" value="">
         <input type="submit" value="Send" id="submit-btn">
@@ -92,7 +92,7 @@
         <span></span>
         Future projects
       </a>
-      <a href="https://www.petwellbeing.ca/">
+      <a href="https://bit.ly/35PuyxW">
         <span></span>
         <span></span>
         <span></span>
