--- a/index.html
+++ b/index.html
@@ -54,14 +54,20 @@
       <a href="https://www.petwellbeing.ca/" class="texto-meds">
         <h3>Pets Meds</h3>
       </a>
-      <p>Notre site vend les medicament à bat prix et explique à nos client leur notice</p>
+      <p>At 1stophealthlypet, you will find all you need for pets meds in general, but more focus will be put on dog and
+        cat’s meds.
+        For a healthy pet needs much, this will be a place you find not only pet’s meds, but also various resources for
+        healthy dog food, healthy dog food recipes, noting this will concern cats as well.
+      </p>
     </div>
     <div class="food" data-aos="zoom-in-down" data-aos-duration="3000">
       <a href="https://www.petwellbeing.ca/" class="texto-food">
         <h3>Pets Food</h3>
       </a>
-      <p>Notre site vend les aliments les moins cher de vos animaux domestique
-      </p>
+      <p>At 1stophealthlypet, you will find all you need for pets food in general, but more focus will be put on dog and
+        cat’s food.
+        For a healthy pet needs much, this will be a place you find not only pet’s food, but also various resources for
+        healthy dog food, healthy dog food recipes, noting this will concern cats as well.</p>
     </div>
     <div class="menu">
       <a href="index.html">
@@ -78,12 +84,12 @@
         <span></span>
         Our services
       </a>
-      <a href="propos.html">
+      <a href="https://bit.ly/2FRNyko">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        What is healthy Pet
+        Best Cat training
       </a>
       <a href="future.html">
         <span></span>
@@ -99,7 +105,7 @@
         <span></span>
         Pets Meds
       </a>
-      <a href="training.html">
+      <a href="https://bit.ly/32FIbOm">
         <span></span>
         <span></span>
         <span></span>
