--- a/portfolio.html
+++ b/portfolio.html
@@ -36,14 +36,26 @@
     </div>
     <div class="service">
       <h3>Why 1 stop?</h3>
-      <p>By definition, a one-stop shop, a one-stop store or a one-stop source is a business or office
-        where multiple services are offered; i.e., customers can get all they need in just &quot;one stop&quot;.
-        This is the reason we create a place where lovers of pets from all over the world will find all
-        they need in one place.
-        From pets’ meds to pets’ food, pets ‘gifts to pets training, 1stophealthypet will be the best
-        source of all your needs for easy, quick and best services.
-        It will make easy your prospects or research in this faster world where time is money. You will
-        find quick guidance and references as regards to pet’s needs of all kind.</p>
+      <p>
+        By definition, a one-stop shop, a one-stop store or a one-stop source is a business or office where multiple
+        services are offered; i.e., customers can get all they need in just "one stop".
+        This is the reason we create a place where lovers of pets from all over the world will find all they need in one
+        place.<br>
+        <span>Why this will be a healthy pet center?</span><br>
+        From pets’ meds to pets’ food, pets ‘gifts to pets training, 1stophealthypet will be the best source of all
+        your
+        needs for easy, quick and best services.
+        It will make easy your prospects or research in this faster world where time is money. You will find quick
+        guidance and references as regards to pet’s needs of all kind.<br>
+        <span>Why this will be a pet place for you?</span><br>
+        A healthy pet involves many aspects, and when one is missing, your pet could no longer be qualified as a
+        healthy
+        one.
+        From balanced food, nutritious diet to protecting your pet from potential deadly diseases, your pet need also to
+        keep a healthy weight, good exercises and finally good interaction with its environment.
+        At 1stophealthypet, lovers of pets will find their unique platform where meds, food and good guidance will be
+        easily provided.
+      </p>
     </div>
     <div class="menu">
       <a href="index.html">
