--- a/portfolio.html
+++ b/portfolio.html
@@ -72,12 +72,12 @@
         <span></span>
         Our services
       </a>
-      <a href="propos.html">
+      <a href="https://bit.ly/2FRNyko">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        What is healthy Pet
+        Best Cat training
       </a>
       <a href="future.html">
         <span></span>
@@ -93,7 +93,7 @@
         <span></span>
         contact
       </a>
-      <a href="training.html">
+      <a href="https://bit.ly/32FIbOm">
         <span></span>
         <span></span>
         <span></span>
