--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         Best Dog training
       </a>
     </div>
-    </>
+  </div>
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
